# fast-api-starter

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  dependencies.py  main.py
app/api/: exception_handlers.py
app/api/v1/: routers.py
app/application/: use_cases.py
app/config/: settings.py
app/di/: dependencies.py
app/domain/: entities.py  services.py
app/infrastructure/http/: http_client.py  interfaces.py
app/infrastructure/logging/: config.py
app/infrastructure/providers/: cat_fact_http_provider.py
app/schemas/: errors.py  responses.py
tests/: conftest.py
tests/architecture/: test_clean_architecture.py
tests/bdd/features/: get_fact.feature
tests/bdd/steps/: test_get_fact_steps.py
tests/e2e/: test_app_e2e.py  test_error_handlers_e2e.py
tests/integration/: test_http_adapter.py
tests/unit/: test_use_case.py
