[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-api-starter-clean"
version = "0.1.0"
description = "Clean architecture FastAPI starter with SOLID, async, httpx, DI, logging, and tests (unit/integration/e2e/BDD)."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-bdd>=7",
  "anyio>=4.4",
  "coverage>=7",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "asyncio: mark test as using asyncio; kept for compatibility without pytest-asyncio",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
omit = ["tests/*", "app/__init__.py"]
show_missing = true
